--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "sketch2vid/vid2vid"]
 	path = sketch2vid/vid2vid
 	url = https://github.com/rohandkn/skribble-to-vid.git
+[submodule "sketch2vid/ECCV2022-RIFE"]
+	path = sketch2vid/ECCV2022-RIFE
+	url = https://github.com/megvii-research/ECCV2022-RIFE
